--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,8 @@
 *.ide-wal
 *.dll
 *.pdb
-Utils.Encrypt/bin/Debug/netstandard2.0/Utils.Encrypt.deps.json
-Utils.Encrypt/bin/Release/netstandard2.0/Utils.Encrypt.deps.json
-Utils.Encrypt/bin/Release/Utils.Encrypt.1.0.0.nupkg
-Utils.Encrypt/obj/Debug/netstandard2.0/Utils.Encrypt.AssemblyInfo.cs
-Utils.Encrypt/obj/Debug/netstandard2.0/Utils.Encrypt.AssemblyInfoInputs.cache
-Utils.Encrypt/obj/Debug/netstandard2.0/Utils.Encrypt.csproj.CoreCompileInputs.cache
-Utils.Encrypt/obj/Debug/netstandard2.0/Utils.Encrypt.csproj.FileListAbsolute.txt
-Utils.Encrypt/obj/Debug/netstandard2.0/Utils.Encrypt.csprojResolveAssemblyReference.cache
-Utils.Encrypt/obj/project.assets.json
-Utils.Encrypt/obj/Release/netstandard2.0/Utils.Encrypt.AssemblyInfo.cs
-Utils.Encrypt/obj/Release/netstandard2.0/Utils.Encrypt.AssemblyInfoInputs.cache
-Utils.Encrypt/obj/Release/netstandard2.0/Utils.Encrypt.csproj.CoreCompileInputs.cache
-Utils.Encrypt/obj/Release/netstandard2.0/Utils.Encrypt.csproj.FileListAbsolute.txt
-Utils.Encrypt/obj/Release/netstandard2.0/Utils.Encrypt.csprojResolveAssemblyReference.cache
-Utils.Encrypt/obj/Release/Utils.Encrypt.1.0.0.nuspec
-Utils.Encrypt/obj/Utils.Encrypt.csproj.nuget.cache
-Utils.Encrypt/obj/Utils.Encrypt.csproj.nuget.g.props
-Utils.Encrypt/obj/Utils.Encrypt.csproj.nuget.g.targets
+*/bin
+*/obj
+*/.vs
+/.vs/Utils.Encrypt/DesignTimeBuild/*.dtbcache
+/*.user
