--- a/Utils.Encrypt/Utils.Encrypt.csproj
+++ b/Utils.Encrypt/Utils.Encrypt.csproj
@@ -1,17 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.1.0</Version>
-    <Description>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt</Description>
+    <Version>1.2.0</Version>
+    <Description>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA</Description>
     <PackageProjectUrl>https://github.com/ww198643/Utils.Encrypt</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/ww198643/Dapper.Extensions/master/icon.jpg</PackageIconUrl>
-    <PackageTags>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt</PackageTags>
+    <PackageIconUrl>https://raw.githubusercontent.com/1100100/Dapper.Extensions/master/icon.jpg</PackageIconUrl>
+    <PackageTags>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Core" Version="1.5.0" />
+    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
   </ItemGroup>
 
 </Project>
