--- a/Utils.Encrypt/Utils.Encrypt.csproj
+++ b/Utils.Encrypt/Utils.Encrypt.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.0</Version>
+    <Version>1.2.1</Version>
     <Description>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA</Description>
-    <PackageProjectUrl>https://github.com/ww198643/Utils.Encrypt</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/1100100/Utils.Encrypt</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/1100100/Utils.Encrypt/master/icon.jpg</PackageIconUrl>
     <PackageTags>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
