--- a/Utils.Encrypt/Utils.Encrypt.csproj
+++ b/Utils.Encrypt/Utils.Encrypt.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.3.0</Version>
+    <Version>2.0.0</Version>
     <Description>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA,PBKDF2</Description>
-    <PackageProjectUrl>https://github.com/1100100/Utils.Encrypt</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/1100100/Utils.Encrypt/master/icon.jpg</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/ZeeLyn/Utils.Encrypt</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/ZeeLyn/Utils.Encrypt/master/icon.jpg</PackageIconUrl>
     <PackageTags>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA,PBKDF2</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>OWEN</Authors>
@@ -15,8 +15,8 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
-    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="3.1.0" />
+    <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.11" />
   </ItemGroup>
 
 </Project>
