--- a/Utils.Encrypt/Utils.Encrypt.csproj
+++ b/Utils.Encrypt/Utils.Encrypt.csproj
@@ -1,22 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Description>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA,PBKDF2</Description>
     <PackageProjectUrl>https://github.com/ZeeLyn/Utils.Encrypt</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/ZeeLyn/Utils.Encrypt/master/icon.jpg</PackageIconUrl>
     <PackageTags>SHA1,SHA256,SHA384,SHA512,MD5,HMACSHA1,HMACSHA256,HMACSHA384,HMACSHA512,HMACMD5,AES,Base64,Bcrypt,RSA,SHA256WithRSA,PBKDF2</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Authors>OWEN</Authors>
-    <Company>OWEN</Company>
+    <Authors>ZeeLyn</Authors>
+    <Company>ZeeLyn</Company>
+    <LangVersion>latest</LangVersion>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.13" />
   </ItemGroup>
 
 </Project>
